Create counters of posts,countries,cities and types of work on the Home page

--- a/Web/WorkAndTravel.Web.ViewModels/WorkAndTravel.Web.ViewModels.csproj
+++ b/Web/WorkAndTravel.Web.ViewModels/WorkAndTravel.Web.ViewModels.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\..\Services\WorkAndTravel.Services.Mapping\WorkAndTravel.Services.Mapping.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Administration\Dashboard\" />
+  </ItemGroup>
+
 </Project>
